AddTaskTodoMicroservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-add-tasks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-add-tasks-api
  template:
    metadata:
      name: todo-add-tasks
      labels:
        app: todo-add-tasks-api
    spec:
      containers:
      - name: todo-add-tasks-api
        image: acrdevtodoproject0409.azurecr.io/todo-add-tasks-api:v1
        ports:
        - containerPort: 8000
