AddTaskTodoMicroservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-add-tasks-api
spec:
  type: ClusterIP
  selector:
    app: todo-add-tasks-api
  ports:
   - port: 80
     targetPort: 8000
